# kiama

./: Cargo.toml
examples/: Cargo.toml
examples/data/: date_series-AAPL-1day.csv
examples/local/: Cargo.toml
examples/local/src/: main.rs
src/: backend.rs  client.rs  lib.rs  library.rs
src/backend/: local.rs
tests/: local_backend_test.rs
