[package]
name = "kiama"
version = "0.0.1"
edition = "2021"
rust-version = "1.77.0"
description = "Dataframe helper"
documentation = "https://github.com/kiama-rs/kiama/blob/main/README.md"
homepage = "https://github.com/kiama-rs/kiama"
repository = "https://github.com/fossair/kiama"
readme = "README.md"
license = "MIT"
keywords = ["macro"]
categories = []


[dependencies]

[dev-dependencies]
tokio = { version = "^1.36.0", features = ["macros", "rt", "rt-multi-thread"] }
